--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "eslint-plugin-react-hooks": "^5.0.0-next-de7d1c907-20221223",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
