--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.5.0",
     "react-router-dom": "^6.5.0",
